--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #000;">
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -39,22 +39,21 @@
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="gallery.html">gallery</a>
-  <a href="testimonial.html">testimonial</a>
-  <a href="contact.html">Contact</a>
+  <a>Home</a>
+  <a >Acerca de</a>
+  <a >Galeria</a>
+  <a >Contactos</a>
 </div>
-<div id="main">
+<div id="main" style="background-color: #000;">
       <!-- header section start -->
       <div class="header_section">
         <div class="container-fluid">
          <div class="row">
             <div class="col-sm-4">
-               <div class="search_icon"><img src="images/search-icon.png"></div>
+               <!-- <div class="search_icon"><img src="images/search-icon.png"></div> -->
             </div>
             <div class="col-sm-4">
-               <div class="logo"><img src="images/logo.png"></div>
+               <div class="logo"><img src="images/logo.png" width="30%"></div>
             </div>
             <div class="col-sm-4">
                <div class="togle_3">
@@ -76,74 +75,26 @@
       <div class="banner_section layout_padding">
       <div class="container">
       <section >
-         <div id="main_slider" class="section carousel slide banner-main" data-ride="carousel">
-            <ol class="carousel-indicators">
-               <li data-target="#main_slider" data-slide-to="0" class="active"></li>
-               <li data-target="#main_slider" data-slide-to="1"></li>
-               <li data-target="#main_slider" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <div class="row marginii">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                           <div class="carousel-sporrt_text ">
-                              <h1 class="sport_text"><strong>Sports<br><span style="color: #fff;">Cycle</span></strong></h1>
-                              <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content</p>
-                              <button class="boynow_bt">Boy Now</button>
-                              <button class="contact_bt">Contact Us</button>
-                           </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                           <div class="img-box">
-                              <figure><img src="images/img-1.png" style="max-width: 100%;"/></figure>
-                           </div>
+         <div class="carousel-inner">
+            <div class="carousel-item active">
+               <div class="container">
+                  <div class="row marginii">
+                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                        <div class="carousel-sporrt_text ">
+                           <h1 class="sport_text"><strong>Grounding Mats<br></strong></h1>
+                           <p class="lorem_text">Solo por hoy lleva gratis una alfombrilla con conexión a tierra.</p>
+                           <button class="boynow_bt">Adquierelo Ya</button>
+                           <button class="contact_bt">Saber mas</button>
                         </div>
                      </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="container">
-                     <div class="row marginii">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                           <div class="carousel-sporrt_text ">
-                              <h1 class="sport_text"><strong>Sports<br><span style="color: #fff;">Cycle</span></strong></h1>
-                              <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content</p>
-                              <button class="boynow_bt">Boy Now</button>
-                              <button class="contact_bt">Contact Us</button>
-                           </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                           <div class="img-box">
-                              <figure><img src="images/img-1.png" style="max-width: 100%;"/></figure>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row marginii">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                           <div class="carousel-sporrt_text ">
-                              <h1 class="sport_text"><strong>Sports<br><span style="color: #fff;">Cycle</span></strong></h1>
-                              <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content</p>
-                              <button class="boynow_bt">Boy Now</button>
-                              <button class="contact_bt">Contact Us</button>
-                           </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                           <div class="img-box">
-                              <figure><img src="images/img-1.png" style="max-width: 100%;"/></figure>
-                           </div>
+                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                        <div class="img-box">
+                           <figure><img src="images/img-1.png" style="max-width: 100%;"/></figure>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
-         </div>
       </section>
       </div>
       </div>
@@ -153,14 +104,10 @@
    <div class="container-fluid">
    <div class="about_section">
       <div class="container">
-         <div class="about_img"><img src="images/about-img1.png" style="max-width: 100%;"></div>
-         <h2 class="about_text"><strong>About <span style="color: #000;">Us</span></strong></h2>
-         <div class="about_middle">
-            <p class="about_lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it </p>
-         </div>
-         <div class="red_bt">
+         <div class="about_img"><img src="images/about-img1.png" style="width: 100%;"></div>
+         <!-- <div class="red_bt">
             <button class="read_more">Read More</button>
-         </div>
+         </div> -->
       </div>
    </div>
    </div>
@@ -170,12 +117,12 @@
       <div class="container">
          <div class="row">
             <div class="col-sm-12">
-               <h1 class="our_text"><strong>Our <span style="color: #000;">Cycles</span></strong></h1>
-               <p class="about_lorem">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+               <h1 class="our_text"><strong>Caracteristicas</strong></h1>
+               <p class="about_lorem">Esto fue hecho por los mejores fabricantes del pais</p>
             </div>
          </div>
       </div>
-      <div class="our_section_2">
+      <!-- <div class="our_section_2">
          <div class="our_main">
             <div id="my_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
@@ -200,11 +147,11 @@
             </div>
           </div>
           <button class="seemore_bt">See More</button>
-      </div>
+      </div> -->
    </div>
    <div class="contact_section layout_padding">
       <div class="container">
-         <h1 class="contact_text"><strong>Contact Us</strong></h1>
+         <h1 class="contact_text"><strong>Contactanos</strong></h1>
       </div>
             <div class="contact_main">
                <div class="enput_section">
@@ -228,7 +175,7 @@
                           </form>   
                        </div> 
                        <div class="send_btn">
-                        <button type="button" class="main_bt"><a href="#">Send</a></button>
+                        <button type="button" class="main_bt"><a href="#">Enviar</a></button>
                        </div>                   
                     </div>
                  </div>
@@ -237,7 +184,7 @@
    </div>
    <!-- our section end -->
    <!-- Testimonial section start -->
-   <div class="testimonial_section layout_padding">
+   <!-- <div class="testimonial_section layout_padding">
       <div class="container">
          <h1 class="contact_text"><strong>Testimonial</strong></h1>
          <p class="dolore_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna  </p>
@@ -248,11 +195,11 @@
          <p class="dolore_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore  , quis nostrud exercitation </p>
          <div class="right_quote"><img src="images/right-quote.png"></div>
       </div> 
-   </div>
+   </div> -->
 
    <!-- Testimonial section end -->
    <!-- footer section start -->
-   <div class="footer_section layout_padding">
+   <!-- <div class="footer_section layout_padding">
       <div class="container">
          <div class="row">
             <div class="col-sm-4">
@@ -291,10 +238,10 @@
             </div>
          </div>   
       </div>
-   </div>
+   </div> -->
    <!-- footer section start -->
    <!-- copyright section start -->
-   <div class="copyright_text">Copyright 2019 All Right Reserved By. <a href="https://html.design"> Free Html Templates</a></div>
+   <div class="copyright_text">Copyright 2024 All Right Reserved By Jesica Hoyos.</div>
 
    </div>
 
